# paper-benchmark

./: .gitignore  NEXT_STEPS.md  README.md  pyproject.toml
blog/: automated-paper-benchmarking.md
demo/: README.md  run_demo.sh  sample_baseline.py
src/autoresearch_bench/: __init__.py  cli.py  codegen.py  extractor.py  papers.py  runner.py  tracker.py
src/paper_benchmark/: __init__.py  cli.py  codegen.py  contradict_integration.py  discover.py  extractor.py  hyperparam.py  llm_extractor.py  memory_integration.py  parallel.py  pdf_fetcher.py  pipeline.py  tracker.py
tests/: test_cli.py  test_codegen.py  test_codegen_templates.py  test_contradict_integration.py  test_discover.py  test_extractor.py  test_hyperparam.py  test_llm_extractor.py  test_memory_integration.py  test_new_patterns.py  test_papers.py  test_parallel.py  test_pdf_fetcher.py  test_pipeline.py  test_runner.py  test_tracker.py
