[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-benchmark"
version = "0.1.0"
description = "Read a paper, extract technique, implement, benchmark against autoresearch"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "httpx>=0.24",
]

[project.optional-dependencies]
pdf = [
    "pypdf>=3.0",
]
llm = [
    "anthropic>=0.20",
]
all = [
    "pypdf>=3.0",
    "anthropic>=0.20",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
paper-benchmark = "paper_benchmark.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
